# AutoDaily_Tauri_v2

./: .gitignore  .prettierrc  .rust-analyzer.toml  AGENTS.md  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri-bak/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri-bak/src/: app.rs  command.rs  constant.rs  domain.rs  infrastructure.rs  lib.rs  main.rs
src-tauri-bak/src/app/: capture.rs  config.rs  dev_test.rs
src-tauri-bak/src/app/capture/: window_cap.rs
src-tauri-bak/src/app/config/: log_conf.rs  performance.rs  shortcut.rs  sys_conf.rs
src-tauri-bak/src/command/: config.rs  dev_test.rs
src-tauri-bak/src/command/config/: idle_monitor.rs  log_conf.rs  performance.rs  sys_conf.rs
src-tauri-bak/src/constant/: project.rs  sys_conf_path.rs
src-tauri-bak/src/domain/: app_handle.rs  entities.rs  manager.rs  services.rs  trait_ad.rs  utils.rs
src-tauri-bak/src/domain/entities/: app_result.rs  config.rs  scheduler.rs  scripts.rs  vision.rs
src-tauri-bak/src/domain/manager/: conf_mgr.rs  device_manager.rs  device_process_manager.rs  main_process_manager.rs
src-tauri-bak/src/domain/services/: capture_basis.rs  idle_monitor.rs
src-tauri-bak/src/domain/trait_ad/: config_category.rs
src-tauri-bak/src/domain/utils/: path_utils.rs
src-tauri-bak/src/infrastructure/: entities.rs  factory.rs  performance.rs  storage.rs
src-tauri-bak/src/infrastructure/entities/: config.rs  devices.rs  vision.rs
src-tauri-bak/src/infrastructure/factory/: ocr_factory.rs
src-tauri-bak/src/infrastructure/services/: capture.rs
src-tauri-bak/src/infrastructure/storage/: config.rs  img_util.rs
src-tauri/adb_cli_local/: Cargo.toml
src-tauri/adb_cli_local/src/: lib.rs
src-tauri/adb_executor/: Cargo.toml
src-tauri/adb_executor/src/: command.rs  config.rs  context.rs  error.rs  executor.rs  lib.rs
src-tauri/capabilities/: default.json  desktop.json
src-tauri/crates/ad_kernel/: Cargo.toml
src-tauri/crates/ad_kernel/src/: geometry.rs  ids.rs  lib.rs
src-tauri/crates/api/: Cargo.toml
src-tauri/crates/api/src/: commands.rs  lib.rs  responses.rs
src-tauri/crates/app/: Cargo.toml
src-tauri/crates/app/src/: lib.rs
src-tauri/crates/child_runner/: Cargo.toml
src-tauri/crates/child_runner/src/: bootstrap.rs  infra.rs  lib.rs  testkit.rs
src-tauri/crates/child_support/: Cargo.toml
src-tauri/crates/child_support/docs/: policy_execution_runtime_plan.md
src-tauri/crates/child_support/src/: domain.rs  infrastructure.rs  lib.rs
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: lib.rs
src-tauri/crates/domain/: Cargo.toml
src-tauri/crates/domain/src/: lib.rs
src-tauri/crates/domain_device/: Cargo.toml
src-tauri/crates/domain_device/src/: device.rs  lib.rs  operation.rs
src-tauri/crates/domain_notification/: Cargo.toml
src-tauri/crates/domain_notification/src/: lib.rs
src-tauri/crates/domain_schedule/: Cargo.toml
src-tauri/crates/domain_schedule/src/: assignment.rs  lib.rs  schedule_models.rs  task_run_status.rs  time_window.rs
src-tauri/crates/domain_script/: Cargo.toml
src-tauri/crates/domain_script/src/: access.rs  action.rs  data_handing.rs  error.rs  flow_control.rs  lib.rs  metadata.rs  point.rs  policy.rs  script_graph.rs  script_info.rs  script_profile.rs  script_transfer.rs  step.rs  task.rs  task_control.rs  task_cycle.rs  variable.rs  vision_node.rs
src-tauri/crates/domain_system/: Cargo.toml
src-tauri/crates/domain_system/src/: lib.rs
src-tauri/crates/domain_vision/: Cargo.toml
src-tauri/crates/domain_vision/src/: compression.rs  lib.rs  model_config.rs  result.rs  search.rs  text_cache_config.rs  vision_snapshot.rs
src-tauri/crates/infra-core/: Cargo.toml
src-tauri/crates/infra-core/src/: lib.rs
src-tauri/crates/infra-device/: Cargo.toml
src-tauri/crates/infra-device/src/: lib.rs
src-tauri/crates/infra-ipc/: Cargo.toml
src-tauri/crates/infra-ipc/src/: lib.rs
src-tauri/crates/infra-process/: Cargo.toml
src-tauri/crates/infra-process/src/: lib.rs
src-tauri/crates/infra-script/: Cargo.toml
src-tauri/crates/infra-script/src/: lib.rs
src-tauri/crates/infra-vision/: Cargo.toml
src-tauri/crates/infra-vision/src/: lib.rs
src-tauri/crates/infra_adb/: Cargo.toml
src-tauri/crates/infra_adb/src/: adb_command.rs  adb_config.rs  adb_context.rs  adb_error.rs  adb_executor.rs  lib.rs
src-tauri/crates/infra_device_runtime/: Cargo.toml
src-tauri/crates/infra_logging/: Cargo.toml
src-tauri/crates/infra_mail/: Cargo.toml
src-tauri/crates/infra_sqlite/: Cargo.toml
src-tauri/crates/infra_vision/: Cargo.toml
src-tauri/crates/infra_vision_cache/: Cargo.toml
src-tauri/crates/infra_window_capture/: Cargo.toml
src-tauri/crates/main/: Cargo.toml
src-tauri/crates/main/src/: lib.rs  (+1 more)
src-tauri/crates/runner_protocol/: Cargo.toml
src-tauri/crates/runtime_common/: Cargo.toml
src-tauri/crates/runtime_engine/: Cargo.toml
src-tauri/crates/script_runtime_tests/: Cargo.toml  README.md
src-tauri/crates/vision_core/: Cargo.toml
src-tauri/crates/window_capture/: Cargo.toml
src-tauri/src/: api.rs  app.rs  constant.rs  domain.rs  infra.rs  infrastructure.rs  lib.rs  main.rs  main_child.rs
src-tauri/src/api/: api_response.rs  backend_cmd.rs  backend_dto.rs  dev_test.rs  domain.rs  dto.rs  infrastructure.rs  local.rs  response.rs  server.rs
src-tauri/src/app/: app_error.rs  before_exit.rs  config.rs  constants.rs  dev_test.rs  init_start.rs  refresh_main_ctx.rs  run.rs  scripts.rs
src-tauri/src/domain/: config.rs  devices.rs  schedule.rs  scripts.rs
src-tauri/src/infra/: app_handle.rs  context.rs  http_client.rs  image.rs  ipc.rs  logging.rs  mail.rs
src-tauri/src/infrastructure/: adb_cli_local.rs  app_handle.rs  capture.rs  config.rs  context.rs  core.rs  db.rs  devices.rs  hash_calculated.rs  http_client.rs  image.rs  ipc.rs  logging.rs  ort.rs  path_resolve.rs  process.rs  scripts.rs  store_local.rs  vision.rs
src-tauri/windows/: nsis-hooks.nsh  uninstall-cleanup.ps1
(+868 files in other folders)
