[package]
name = "auto_daily"
version = "0.1.0"
description = "A Tauri App"
authors = ["小口嗦面"]
edition = "2021"
default-run = "auto_daily"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant,but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
# staticlib：生成一个静态库文件（例如 .a 或 .lib），这种文件在编译时会被完全嵌入到其他程序中。适用于需要将 Rust 代码静态链接到其他项目（例如 C/C++ 项目）的场景。
# cdylib：生成一个动态链接库文件（例如 .so、.dll 或 .dylib），这种文件可以在运行时被其他程序动态加载。适用于需要将 Rust 代码作为共享库供其他语言或应用调用的场景。
# rlib：生成一个 Rust 库文件（.rlib），这是 Rust 特有的库格式，包含编译后的代码和元数据，供其他 Rust crate 使用。适用于 Rust 项目之间的库依赖。
# crate-type = ["staticlib", "cdylib", "rlib"]
name = "auto_daily_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "auto_daily_child"
path = "src/main_child.rs"


[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2.0"
#tokio = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "time", "process", "signal", "sync", "fs", "parking_lot"] }
crossbeam-channel = "0.5.15"
image = { version = "0.25", features = ["png", "jpeg"] }
tracing = "0.1"
adb_client = {version = "2.1.18"}


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
#tauri
tauri = { version = "2", features = ["uuid", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
#tauri-plugin-fs = "2"
# 系统通知
tauri-plugin-notification = "2"
tauri-plugin-store = "2"

#序列化/yaml
serde = { workspace = true}
serde_json = "1"
serde_yaml = "0.9"
#erased-serde = "0.4.6"
bincode = { version = "2.0.1"}

# 截图
xcap = "0.7"
#adb_executor = { path = "adb_executor" }
adb_client = {workspace = true}
#fs_extra = "1.3"
# error
thiserror = { workspace = true}
#anyhow = "1.0"

# logger
tracing = { workspace = true }
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"
#once_cell = "1.21"
# time format
chrono  = "0.4"
# encode/decode
base64 = "0.22"

#图像处理
image = { workspace = true }
#ort = {version = "2.0.0-rc.10", features = ["directml", "cuda"] }
ort = {version = "2.0.0-rc.10", features = ["directml"] }
ndarray = "0.16.1"
imageproc = "0.25.0"
rayon = "1.11.0"

##绘制/更改为前端绘制检测结果
#raqote = { version = "0.8", default-features = false,  features = ["text"] }
#font-kit = { version = "0.14"}

# cpu核心
num_cpus = "1.17"
# cpu亲和性
#core_affinity = "0"
# 高性能哈希,hashmap
ahash = {version = "0.8.12", features = ["serde"] }
# 高性能哈希,hash值计算/文件一致性
twox-hash = { version = "2.1.1", features = ["xxhash3_64"] }
# 哈希加密用
#sha3 = "0.10.8"
# 内存映射(onnx无法避免加载模型数据这一步，故取消)
#memmap2 = "0.9"
#双缓冲
#ringbuf = "0.4"
# 系统信息
sysinfo = "0.37"
# 进程间通信
interprocess = { version = "2.2.3", features = ["tokio"] }

#异步
tokio = { workspace = true }
# 异步通道
crossbeam-channel = { workspace = true}

# 异步trait
async-trait = "0.1.89"
uuid = { version = "1.18.0", features = ["v7", "serde"] }

# 日期口而笑哦
cron = "0.15.0"
# 表达式
rhai = { version = "1.23.4", features = ["serde"] }
lazy_static = "1.5.0"  #std::sync::OnceLock (自 Rust 1.70 起)，或者 tokio::sync::OnceCell
#更小的锁等
#parking_lot = "0.12.4"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json"] }
num = "0.4.3"

# 字符串搜索
aho-corasick = "1.1"

# Windows 原生API（命名共享内存、亲和性）
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Memory", "Win32_System_Threading"] }

# Unix系统调用
[target.'cfg(unix)'.dependencies]
nix = "0.30"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"

# 直接依赖 rustls 并强制使用 ring 后端，覆盖 adb_client 的传递依赖
# 这样可以避免 aws-lc-rs 的 C/C++ FFI 代码与 Cranelift 的冲突
#rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }