[package]
name = "auto_daily"
version = "0.1.0"
description = "A Tauri App"
authors = ["小口嗦面"]
edition = "2024"
default-run = "auto_daily"

[features]
default = ["child-bin"]
child-bin = ["dep:child_runner"]

[workspace]
members = [".", "crates/domain_device", "crates/domain_schedule", "crates/domain_notification", "crates/domain_script", "crates/domain_system", "crates/domain_vision", "crates/runner_protocol", "crates/child_runner", "crates/ad_kernel", "crates/infra_vision", "crates/infra_adb", "crates/infra_device_runtime", "crates/infra_logging", "crates/infra_mail", "crates/infra_sqlite", "crates/infra_vision_cache", "crates/infra_window_capture"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant,but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
# staticlib：生成一个静态库文件（例如 .a 或 .lib），这种文件在编译时会被完全嵌入到其他程序中。适用于需要将 Rust 代码静态链接到其他项目（例如 C/C++ 项目）的场景。
# cdylib：生成一个动态链接库文件（例如 .so、.dll 或 .dylib），这种文件可以在运行时被其他程序动态加载。适用于需要将 Rust 代码作为共享库供其他语言或应用调用的场景。
# rlib：生成一个 Rust 库文件（.rlib），这是 Rust 特有的库格式，包含编译后的代码和元数据，供其他 Rust crate 使用。适用于 Rust 项目之间的库依赖。
# crate-type = ["staticlib", "cdylib", "rlib"]
name = "auto_daily_lib"
crate-type = ["cdylib", "rlib"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
#tokio = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "time", "process", "signal", "sync", "fs", "parking_lot"] }
tokio-util = { version = "0.7", features = ["rt", "io"] }
crossbeam-channel = "0.5.15"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tracing = "0.1"
adb_client = { version = "3.1.1", default-features = false, features = ["framebuffer", "mdns", "usb"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v7", "serde"] }
serde_yaml = "0.9"
bincode = { version = "=2.0.1" }
base64 = "0.22"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tracing", "download-binaries", "tls-rustls", "copy-dylibs", "api-24", "directml"] }
ndarray = "0.17.2"
imageproc = { version = "0.26.1", default-features = false, features = ["rayon"] }
rayon = "1.11.0"
ahash = { version = "0.8.12", features = ["serde"] }
aho-corasick = "1.1"
regex = "1.12.2"
ts-rs = { version = "12", features = ["serde-json-impl"] }
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"
xcap = "0.9.6"
num_cpus = "1.17"
twox-hash = { version = "2", features = ["xxhash3_64"] }
interprocess = { version = "2", features = ["tokio"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "multipart", "stream"] }
sha2 = "0.10"
async-trait = "0.1.89"
cron = "0.15.0"
rhai = { version = "1.23.4", features = ["serde", "sync"] }
lazy_static = "1.5.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "json", "chrono", "macros", "derive"] }
num = "0.4.3"
machineid-rs = "1.2.4"
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls", "pool", "ring", "webpki-roots"] }
tauri = { version = "2.10.3", features = ["uuid", "unstable"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-store = "2.4.2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-single-instance = "2.4.0"
windows-sys = { version = "0.61.2" ,features = ["Win32_Security", "Win32_System_Threading"] }
nix = "0.31.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
domain_device = { package = "domain-device", path = "crates/domain_device" }
domain_schedule = { package = "domain-schedule", path = "crates/domain_schedule" }
domain_notification = { package = "domain-notification", path = "crates/domain_notification" }
domain_script = { package = "domain-script", path = "crates/domain_script" }
domain_system = { package = "domain-system", path = "crates/domain_system" }
domain_vision = { package = "domain-vision", path = "crates/domain_vision" }
child_runner = { path = "crates/child_runner", optional = true }
infra_sqlite = { package = "infra-sqlite", path = "crates/infra_sqlite" }
infra_mail = { package = "infra-mail", path = "crates/infra_mail" }
infra_adb = { package = "infra-adb", path = "crates/infra_adb" }
infra_device_runtime = { package = "infra-device-runtime", path = "crates/infra_device_runtime" }
infra_window_capture = { package = "infra-window-capture", path = "crates/infra_window_capture" }
infra_vision_cache = { package = "infra-vision-cache", path = "crates/infra_vision_cache" }
runner_protocol = { package = "runner-protocol", path = "crates/runner_protocol" }
ad_kernel = { path = "crates/ad_kernel" }
infra_logging = { package = "infra-logging", path = "crates/infra_logging" }
infra_vision = { package = "infra-vision", path = "crates/infra_vision" }
#tauri
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = { workspace = true }
#tauri-plugin-fs = "2"
# 系统通知
tauri-plugin-notification = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-store = { workspace = true }
tauri-plugin-updater = { workspace = true }

#序列化/yaml
serde = { workspace = true}
serde_json = { workspace = true }
serde_yaml = { workspace = true }
#erased-serde = "0.4.6"

# error
thiserror = { workspace = true}
#anyhow = "1.0"

# logger
tracing = { workspace = true }

tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
#once_cell = "1.21"
# time format
chrono = { workspace = true }
# encode/decode
base64 = { workspace = true }

#图像处理
image = { workspace = true }
#ort = {version = "2.0.0-rc.10", features = ["directml", "cuda"] }
ort = { workspace = true }

##绘制/更改为前端绘制检测结果
#raqote = { version = "0.8", default-features = false,  features = ["text"] }
#font-kit = { version = "0.14"}

# cpu核心
num_cpus = { workspace = true }
# cpu亲和性
#core_affinity = "0"
# 高性能哈希,hash值计算/文件一致性
twox-hash = { workspace = true }
# 哈希加密用
#sha3 = "0.10.8"
# 内存映射(onnx无法避免加载模型数据这一步，故取消)
#memmap2 = "0.9"
#双缓冲
#ringbuf = "0.4"
# 系统信息/监控
#sysinfo = "0.37"
# 进程间通信
interprocess = { workspace = true }

#异步
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
# 异步通道
crossbeam-channel = { workspace = true}

# 异步trait
async-trait = { workspace = true }
uuid = { workspace = true }

# 日期口而笑哦
cron = { workspace = true }
lazy_static = { workspace = true }  #std::sync::OnceLock (自 Rust 1.70 起)，或者 tokio::sync::OnceCell
#更小的锁等
#parking_lot = "0.12.4"

num = { workspace = true }

# 字符串搜索
# TypeScript 类型生成
ts-rs = { workspace = true }
machineid-rs = { workspace = true }
#machine-uid = "0.5.4"

# Windows 原生API（命名共享内存、亲和性）
[target.'cfg(windows)'.dependencies]
#windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Memory", "Win32_System_Threading"] }
windows-sys = { workspace = true }

# Unix系统调用
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-window-state = { workspace = true }
tauri-plugin-single-instance = { workspace = true }

# 直接依赖 rustls 并强制使用 ring 后端，覆盖 adb_client 的传递依赖
# 这样可以避免 aws-lc-rs 的 C/C++ FFI 代码与 Cranelift 的冲突
#rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
