[package]
name = "adb_executor"
version = "0.1.0"
edition = "2021"

[dependencies]
#serde = { version = "1", features = ["derive"] }
#thiserror = "2.0"
#tokio = { version = "1", features = ["full"] }
#crossbeam-channel = "0.5.15"
#adb_client = "2.1.17"
##core_affinity = "0.8.1"
#image = { version = "0.25", features = ["png", "jpeg"] }
#tracing = "0.1"

serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = {workspace = true}
#core_affinity = "0.8.1"
image = { workspace = true }
tracing = { workspace = true }


adb_client = { workspace = true }