[package]
name = "ad_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# 内部依赖
ad_core = { path = "../core" }
ad_domain = { path = "../domain" }
ad_infra_core = { path = "../infra-core" }
ad_infra_process = { path = "../infra-process" }
ad_infra_ipc = { path = "../infra-ipc" }
ad_infra_vision = { path = "../infra-vision" }
ad_infra_device = { path = "../infra-device" }
ad_infra_script = { path = "../infra-script" }
ad_app = { path = "../app" }

# Workspace共享依赖
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }