[package]
name = "child_support"
version = "0.1.0"
edition = "2021"

[dependencies]
runtime_common = { path = "../runtime_common" }
vision_core = { path = "../vision_core" }
runtime_engine = { path = "../runtime_engine" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
interprocess = { workspace = true }
rhai = { workspace = true }
