[package]
name = "domain-script"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true }
ad_kernel = { path = "../ad_kernel" }
domain_vision = { package = "domain-vision", path = "../domain_vision" }

[dev-dependencies]
uuid = { workspace = true }
