[package]
name = "infra-vision"
version = "0.1.0"
edition = "2024"

[dependencies]
ad_kernel = { path = "../ad_kernel" }
infra_logging = { package = "infra-logging", path = "../infra_logging" }
domain_vision = { package = "domain-vision", path = "../domain_vision" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }
serde_yaml = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }
imageproc = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }
twox-hash = { workspace = true }
