[package]
name = "runtime_common"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8.12", features = ["serde"] }
async-trait = "0.1.89"
bincode = { version = "=2.0.1" }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5.0"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["sync", "io-util"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
ts-rs = { version = "12", features = ["serde-json-impl"] }
uuid = { version = "1.18.0", features = ["v7", "serde"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading"] }
