[package]
name = "runtime_common"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { workspace = true }
async-trait = "0.1.89"
bincode = { workspace = true }
chrono = { workspace = true }
lazy_static = "1.5.0"
serde = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "io-util"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
ts-rs = { workspace = true }
uuid = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading"] }
