[package]
name = "runtime_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
runtime_common = { path = "../runtime_common" }
vision_core = { path = "../vision_core" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
crossbeam-channel = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
adb_client = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_yaml = { workspace = true }
bincode = { workspace = true }
base64 = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }
imageproc = { workspace = true }
rayon = { workspace = true }
ahash = { workspace = true }
aho-corasick = { workspace = true }
regex = { workspace = true }
ts-rs = { workspace = true }
serde_json = { workspace = true }
xcap = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
num_cpus = { workspace = true }
twox-hash = { workspace = true }
interprocess = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
cron = { workspace = true }
rhai = { workspace = true }
lazy_static = { workspace = true }
sqlx = { workspace = true }
num = { workspace = true }
machineid-rs = { workspace = true }
tauri = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-store = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
