[package]
name = "script-runtime-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
ad_kernel = { path = "../ad_kernel" }
child_runner = { path = "../child_runner", features = ["testkit"] }
chrono = { workspace = true }
domain_device = { package = "domain-device", path = "../domain_device" }
domain_script = { package = "domain-script", path = "../domain_script" }
infra_sqlite = { package = "infra-sqlite", path = "../infra_sqlite" }
runner_protocol = { package = "runner-protocol", path = "../runner_protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "script-runtime-tests"
path = "src/main.rs"
