[package]
name = "vision_core"
version = "0.1.0"
edition = "2021"

[dependencies]
runtime_common = { path = "../runtime_common" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
image = { workspace = true }
bincode = { version = "=2.0.1" }
base64 = "0.22"
serde_yaml = "0.9"
ort = { version = "2.0.0-rc.12", features = ["directml"] }
ndarray = "0.17.2"
imageproc = { version = "0.26.1", default-features = false, features = ["rayon"] }
rayon = "1.11.0"
aho-corasick = "1.1"
regex = "1.12.2"
ts-rs = { version = "12", features = ["serde-json-impl"] }
