[package]
name = "vision_core"
version = "0.1.0"
edition = "2021"

[dependencies]
runtime_common = { path = "../runtime_common" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
image = { workspace = true }
bincode = { workspace = true }
base64 = { workspace = true }
serde_yaml = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }
imageproc = { workspace = true }
rayon = { workspace = true }
aho-corasick = { workspace = true }
regex = { workspace = true }
ts-rs = { workspace = true }
