[package]
name = "window_capture"
version = "0.1.0"
edition = "2021"

[dependencies]
runtime_common = { path = "../runtime_common" }
image = { workspace = true }
tokio = { workspace = true }
xcap = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
] }
